[package]
edition = "2021"
name    = "raffstore"
version = "0.1.0"

[[bin]]
name = "raffstore"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-hal          = { version = "1.0.0-beta.0", features = ["esp32", "unstable"] }
esp-println      = { version = "0.13", features = ["esp32","log"] }
esp-backtrace    = { version = "0.15", features = ["esp32","println","panic-handler", "exception-handler"] }
nb               = "1.1.0"
embassy-executor = "0.7.0"
embassy-sync     = "0.6.2"
embassy-time     = "0.4.0"
esp-hal-embassy  = { version = "0.7.0", features = ["esp32"] }
embedded-can     = "0.4.1"
static_cell      = { version = "2.1.0"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
